--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: realfiftyfifty
-version: 0-3-4
+application: half-n-half
+version: 0-0-1
 runtime: python27
 api_version: 1
 threadsafe: true
